--- a/app/src/main/resources/bootstrap.yml
+++ b/app/src/main/resources/bootstrap.yml
@@ -1,60 +1,3 @@
-dms:
-    jasper-server:
-        password: 'null'
-        url: 'null'
-        username: 'null'
-eureka:
-    client:
-        fetch-registry: false
-        register-with-eureka: false
-        serviceUrl:
-            defaultZone: http://
-    instance:
-        prefer-ip-address: true
-logging:
-    level:
-        org:
-            hibernate:
-                SQL: debug
-            springframework: debug
-        root: info
-security:
-    oauth2:
-        resource:
-            jwk:
-                key-set-uri: http://192.168.25.71:30110/hms-auth/.well-known/jwks.json
 spring:
     application:
-        name: cfs-service
-    cloud:
-        config:
-            allow-override: true
-            override-none: true
-            override-system-properties: false
-    data:
-        mongodb:
-            host: 192.168.25.217
-    datasource:
-        driver-class-name: oracle.jdbc.OracleDriver
-        hikari:
-            connection-test-query: select 1 from DUAL
-        password: fnacapp
-        url: jdbc:oracle:thin:@192.168.25.64:1521/hmsdev
-        username: fnacapp
-    elasticsearch:
-        rest:
-            password: easymed
-            uris: http://192.168.25.203:30559
-            username: easymed
-    jpa:
-        hibernate:
-            ddl-auto: none
-        properties:
-            hibernate:
-                dialect: org.hibernate.dialect.Oracle12cDialect
-                format_sql: true
-                show_sql: true
-                jdbc:
-                    batch_size: 4
-    profiles:
-        active: dev
+        name: fndc-service
