--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ deploy-dev:
     - rm -rf .m2/repository/ir
     - mvn $MAVEN_CLI_OPTS clean package -Dmaven.test.skip=true
     - echo "------------------------docker build-------------------------------------------------"
-    - docker build -t $CONTAINER_JOBID_IMAGE_DEV .
+    - docker build -t $CONTAINER_JOBID_IMAGE_DEV -f DockerfileDev .
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker push $CONTAINER_JOBID_IMAGE_DEV
     - echo "------------------------deploy docker-------------------------------------------------"
