--- a/model/pom.xml
+++ b/model/pom.xml
@@ -10,5 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>model</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+            <version>1.8.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
